--- a/react/package.json
+++ b/react/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^7.0.0",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.17",
     "pure-react-carousel": "^1.17.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts-ts": "^3.1.0",
     "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
